5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4075/executions/1643_1054.log
== TEST (2019-04-14 22:43:19) 
-- CODE:
coorA= int(input("leia coordenadas de x: "))
coorB= int(input("leia coordenadas de y: "))

if (2*coorA + coorBc= 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"

print (mensagem.lower())

-- ERROR:
File "XXXX", line 4
    if (2*coorA + coorBc= 3):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:43:56) 
-- CODE:
coorA= int(input("leia coordenadas de x: "))
coorB= int(input("leia coordenadas de y: "))

if (2*coorA + coorBc== 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"

print (mensagem.lower())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (2*coorA + coorBc== 3):
NameError: name 'coorBc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:44:06) 
-- CODE:
coorA= int(input("leia coordenadas de x: "))
coorB= int(input("leia coordenadas de y: "))

if (2*coorA + coorBc== 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"

print (mensagem.lower())

-- EXECUTION TIME:
0.21353
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/1054/main.py", line 4, in <module>
    if (2*coorA + coorBc== 3):
NameError: name 'coorBc' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:44:14) 
-- CODE:
coorA= int(input("leia coordenadas de x: "))
coorB= int(input("leia coordenadas de y: "))

if (2*coorA + coorBc== 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"

print (mensagem.lower())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (2*coorA + coorBc== 3):
NameError: name 'coorBc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:44:48) 
-- CODE:
coorA= int(input("leia coordenadas de x: "))
coorB= int(input("leia coordenadas de y: "))

if (2*coorA + coorB== 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"

print (mensagem.lower())

-- EXECUTION TIME:
0.139442
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
